frontend/test/should_fail/basic_006.grg
test t {
  x:Node;
  negative {
    x:Node;
  }
}
